engine/mono/Imgui/imgui.cs


        // ../../imgui/imgui.h:405
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetCursorPosX@ImGui@@YAXM@Z")]
        public static extern void SetCursorPosX(
            float local_x
        );

        // ../../imgui/imgui.h:406
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetCursorPosY@ImGui@@YAXM@Z")]
        public static extern void SetCursorPosY(
            float local_y
        );

        // ../../imgui/imgui.h:407
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetCursorStartPos@ImGui@@YA?AUImVec2@@XZ")]
        public static extern Vector2 GetCursorStartPos(
        );

        // ../../imgui/imgui.h:408
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetCursorScreenPos@ImGui@@YA?AUImVec2@@XZ")]
        public static extern Vector2 GetCursorScreenPos(
        );

        // ../../imgui/imgui.h:409
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SetCursorScreenPos@ImGui@@YAXAEBUImVec2@@@Z")]
        public static extern void SetCursorScreenPos(
            in Vector2 pos
        );

        // ../../imgui/imgui.h:410
        [DllImport(Engine.Paths.Exe, EntryPoint = "?AlignTextToFramePadding@ImGui@@YAXXZ")]
        public static extern void AlignTextToFramePadding(
        );

        // ../../imgui/imgui.h:411
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetTextLineHeight@ImGui@@YAMXZ")]
        public static extern float GetTextLineHeight(
        );

        // ../../imgui/imgui.h:412
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetTextLineHeightWithSpacing@ImGui@@YAMXZ")]
        public static extern float GetTextLineHeightWithSpacing(
        );

        // ../../imgui/imgui.h:413
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetFrameHeight@ImGui@@YAMXZ")]
        public static extern float GetFrameHeight(
        );

        // ../../imgui/imgui.h:414
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetFrameHeightWithSpacing@ImGui@@YAMXZ")]
        public static extern float GetFrameHeightWithSpacing(
        );

        // ../../imgui/imgui.h:423
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PushID@ImGui@@YAXPEBD@Z")]
        public static extern void PushID(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id
        );

        // ../../imgui/imgui.h:424
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PushID@ImGui@@YAXPEBD0@Z")]
        public static extern void PushID(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id_begin,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id_end
        );

        // ../../imgui/imgui.h:425
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PushID@ImGui@@YAXPEBX@Z")]
        public static extern void PushID(
            IntPtr ptr_id
        );

        // ../../imgui/imgui.h:426
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PushID@ImGui@@YAXH@Z")]
        public static extern void PushID(
            int int_id
        );

        // ../../imgui/imgui.h:427
        [DllImport(Engine.Paths.Exe, EntryPoint = "?PopID@ImGui@@YAXXZ")]
        public static extern void PopID(
        );

        // ../../imgui/imgui.h:428
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetID@ImGui@@YAIPEBD@Z")]
        public static extern uint GetID(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id
        );

        // ../../imgui/imgui.h:429
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetID@ImGui@@YAIPEBD0@Z")]
        public static extern uint GetID(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id_begin,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id_end
        );

        // ../../imgui/imgui.h:430
        [DllImport(Engine.Paths.Exe, EntryPoint = "?GetID@ImGui@@YAIPEBX@Z")]
        public static extern uint GetID(
            IntPtr ptr_id
        );

        // ../../imgui/imgui.h:433
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextUnformatted@ImGui@@YAXPEBD0@Z")]
        public static extern void TextUnformatted(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string text,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string text_end = default
        );

        // ../../imgui/imgui.h:434
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Text@ImGui@@YAXPEBDZZ")]
        public static extern void Text(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:435
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextV@ImGui@@YAXPEBDPEAD@Z")]
        public static extern void TextV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:436
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextColored@ImGui@@YAXAEBUImVec4@@PEBDZZ")]
        public static extern void TextColored(
            in Vector4 col,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:437
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextColoredV@ImGui@@YAXAEBUImVec4@@PEBDPEAD@Z")]
        public static extern void TextColoredV(
            in Vector4 col,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:438
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextDisabled@ImGui@@YAXPEBDZZ")]
        public static extern void TextDisabled(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:439
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextDisabledV@ImGui@@YAXPEBDPEAD@Z")]
        public static extern void TextDisabledV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:440
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextWrapped@ImGui@@YAXPEBDZZ")]
        public static extern void TextWrapped(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:441
        [DllImport(Engine.Paths.Exe, EntryPoint = "?TextWrappedV@ImGui@@YAXPEBDPEAD@Z")]
        public static extern void TextWrappedV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:442
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LabelText@ImGui@@YAXPEBD0ZZ")]
        public static extern void LabelText(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:443
        [DllImport(Engine.Paths.Exe, EntryPoint = "?LabelTextV@ImGui@@YAXPEBD0PEAD@Z")]
        public static extern void LabelTextV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:444
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BulletText@ImGui@@YAXPEBDZZ")]
        public static extern void BulletText(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt
        );

        // ../../imgui/imgui.h:445
        [DllImport(Engine.Paths.Exe, EntryPoint = "?BulletTextV@ImGui@@YAXPEBDPEAD@Z")]
        public static extern void BulletTextV(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string fmt,
            ref sbyte args
        );

        // ../../imgui/imgui.h:450
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Button@ImGui@@YA_NPEBDAEBUImVec2@@@Z")]
        public static extern bool Button(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in Vector2 size = default
        );

        // ../../imgui/imgui.h:451
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SmallButton@ImGui@@YA_NPEBD@Z")]
        public static extern bool SmallButton(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label
        );

        // ../../imgui/imgui.h:452
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InvisibleButton@ImGui@@YA_NPEBDAEBUImVec2@@@Z")]
        public static extern bool InvisibleButton(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            in Vector2 size
        );

        // ../../imgui/imgui.h:453
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ArrowButton@ImGui@@YA_NPEBDH@Z")]
        public static extern bool ArrowButton(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string str_id,
            int dir
        );

        // ../../imgui/imgui.h:454
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Image@ImGui@@YAXPEAXAEBUImVec2@@11AEBUImVec4@@2@Z")]
        public static extern void Image(
            IntPtr user_texture_id,
            in Vector2 size,
            in Vector2 uv0,
            in Vector2 uv1,
            in Vector4 tint_col,
            in Vector4 border_col = default
        );
        // overload
        public static void Image(
            IntPtr user_texture_id,
            in Vector2 size,
            in Vector2 uv0,
            in Vector2 uv1
        )
        {
            Image(user_texture_id, size, uv0, uv1, new Vector4(1,1,1,1));
        }
        // overload
        public static void Image(
            IntPtr user_texture_id,
            in Vector2 size,
            in Vector2 uv0 = default
        )
        {
            Image(user_texture_id, size, uv0, new Vector2(1,1));
        }

        // ../../imgui/imgui.h:455
        [DllImport(Engine.Paths.Exe, EntryPoint = "?ImageButton@ImGui@@YA_NPEAXAEBUImVec2@@11HAEBUImVec4@@2@Z")]
        public static extern bool ImageButton(
            IntPtr user_texture_id,
            in Vector2 size,
            in Vector2 uv0,
            in Vector2 uv1,
            int frame_padding,
            in Vector4 bg_col,
            in Vector4 tint_col
        );
        // overload
        public static bool ImageButton(
            IntPtr user_texture_id,
            in Vector2 size,
            in Vector2 uv0,
            in Vector2 uv1,
            int frame_padding = -1,
            in Vector4 bg_col = default
        )
        {
            return ImageButton(user_texture_id, size, uv0, uv1, frame_padding, bg_col, new Vector4(1,1,1,1));
        }
        // overload
        public static bool ImageButton(
            IntPtr user_texture_id,
            in Vector2 size,
            in Vector2 uv0 = default
        )
        {
            return ImageButton(user_texture_id, size, uv0, new Vector2(1,1));
        }

        // ../../imgui/imgui.h:456
        [DllImport(Engine.Paths.Exe, EntryPoint = "?Checkbox@ImGui@@YA_NPEBDPEA_N@Z")]
        public static extern bool Checkbox(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref bool v
        );

        // ../../imgui/imgui.h:457
        [DllImport(Engine.Paths.Exe, EntryPoint = "?CheckboxFlags@ImGui@@YA_NPEBDPEAII@Z")]
        public static extern bool CheckboxFlags(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref uint flags,
            uint flags_value
        );

        // ../../imgui/imgui.h:458
        [DllImport(Engine.Paths.Exe, EntryPoint = "?RadioButton@ImGui@@YA_NPEBD_N@Z")]
        public static extern bool RadioButton(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            bool active
        );

        // ../../imgui/imgui.h:459
        [DllImport(Engine.Paths.Exe, EntryPoint = "?RadioButton@ImGui@@YA_NPEBDPEAHH@Z")]
        public static extern bool RadioButton(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_button
        );
